# contracts

./: Anchor.toml  README.md
agent/: .env.example  README.md  package.json  tsconfig.json
agent/scripts/: demo-tick.ts  deposit.ts  init-vault.ts
agent/src/: index.ts
programs/ai-vault/: Cargo.toml
programs/ai-vault/src/: lib.rs
programs/contracts/: Cargo.toml
programs/contracts/src/: lib.rs
programs/solobank-vault/: Cargo.toml
programs/solobank-vault/src/: lib.rs
tests/: ai-vault.js  contracts.js
