[package]
name = "solobank-vault"
version = "0.1.0"
description = "AI Decision Vault — autonomous DeFi management on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solobank_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
